Bankend for the login test well

--- a/ContractBack/ContractBack/appsettings.json
+++ b/ContractBack/ContractBack/appsettings.json
@@ -18,7 +18,7 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
     "SenderEmail": "dingyeuyang@gmail.com",
-    "SenderPassword": "the password"
+    "SenderPassword": "your password here"
   }
 
 }
